--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,7 @@
   "theme_color": "#f59e0b",
   "description": "Kunlik ishchilar va xizmat ko‘rsatish firmalariga buyurtma berish ilovasi",
   "icons": [
-    {
-      "src": "icon-190.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-191.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon-190.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-191.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
